# navtools

./: .buildinfo  .gitignore  LICENSE  Makefile  README.rst  analysis.html  build.html  build.py  genindex.html  geomag70_linux.tar  igrf11.html  igrf11coeffs.txt  index.html  installation.html  introduction.html  navigation.html  navtools_init.html  objects.inv  planning.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: analysis.doctree  build.doctree  environment.pickle  igrf11.doctree  index.doctree  installation.doctree  introduction.doctree  navigation.doctree  navtools_init.doctree  planning.doctree
_sources/: igrf11.txt  index.txt  navigation.txt
data/: 2021 waypoints.gpx  Beaufort-St. Mary's Schedule.csv  Beaufort-St. Mary's.gpx  Herrington to Drum Point.txt  TRACK_041812.csv  TRACK_041812.gpx  beaufort to st marys.txt
docs/: Makefile  analysis.rst  conf.py  igrf.rst  igrf11.rst  index.html  index.rst  introduction.rst  navigation.rst  olc.rst  opencpn_table.rst  planning.rst  waypoint_merge.rst
geomag70_linux/: sample_coords.txt
navtools/: __init__.py  analysis.py  igrf.py  igrf11.py  lowrance_usr.py  navigation.py  olc.py  opencpn_table.py  planning.py  solar.py  waypoint_merge.py
source/: analysis.rst  build.rst  conf.py  installation.rst  introduction.rst  navtools_init.rst  planning.rst
spike/: usr_symbol_mapping.py
test/: __init__.py  main.py  test_analysis.py  test_igrf.py  test_igrf11.py  test_lowrance_usr.py  test_navigation.py  test_olc.py  test_opencpn_table.py  test_planning.py  (+2 more)
(+94 files in other folders)
